<resources>
    <string name="app_name">HearTuner</string>
    <string name="action_settings">Settings</string>
    <string name="blank"></string>

    <string name="enable_button">Enable Button</string>
    <string name="disable_button">Disable Button</string>
    <string name="settings_button">Setup Button</string>
    <string name="enable_button_text">Enable</string>
    <string name="disable_button_text">Disable</string>
    <string name="settings_button_text">Setup Hearing Profile</string>


    <string name="settings_instructions_text">Choose a Hearing Profile</string>
    <string name="operating_mode_title">Operating Mode</string>
    <string name="choose_test_profile_button">Test Results</string>
    <string name="choose_manual_profile">Manual Entry</string>
    <string name="activate_hearing_test">Setup Test Profile</string>
    <string name="activate_manual_entry">Setup Manual Profile</string>

    <string name="title_manual_profile_entry">Adjust Manual Hearing Profile</string>
    <string name="center_frequency">Center Frequency</string>
    <string name="max_range">Max Range</string>
    <string name="min_range">Min Range</string>


    <string name="start_test_button">Start Test</string>
    <string name="confirm_hearing_button">Yes</string>
    <string name="deny_hearing_button">No</string>
</resources>
